# fast-api-base

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
app/: app.py  main.py
app/controllers/: profile_controller.py  user_controller.py
app/core/: models.py
app/middlewares/: authentication.py  base.py
app/models/: __init__.py  profile.py  user.py
app/models/sql/: profile.py  user.py
app/patterns/: unit_of_work.py
app/repository/: generic.py  profile.py  user.py
app/routes/: __init__.py  auth.py  profile_routes.py  user_routes.py
app/services/: profile_services.py  user_services.py
app/utils/: camel.py  exceptions.py  jwt.py  msg.py  passw.py  router.py
config/: database.py  settings.py
migrations/: env.py
migrations/versions/: 7bfd09151020_initial.py
tests/: profile.py  users.py
